<resources>
    <string name="app_name">OnePass Bluetooth Keyboard</string>

    <!-- K2A -->
    <string name="kp2aplugin_title">OnePass Bluetooth Keyboard</string>
    <string name="kp2aplugin_shortdesc">Enter password over bluetooth keyboard</string>
    <string name="kp2aplugin_author">[mzrw](mzrw)</string>

    <string name="type_user_pass">Type username/password to Bluetooth</string>
    <string name="type_user_pass_enter">Type username/password/enter to Bluetooth</string>

    <!-- KEYBOARD ACTIVITY -->
    <string name="title_activity_keyboard">Bluetooth Keyboard</string>
    <string name="device">Device</string>
    <string name="keyboard_layout">Keyboard Layout</string>
    <string name="no_authorized_devices">No devices authorized => Select some</string>
    <string name="keyboard_password">password</string>
    <string name="generate_password">generate</string>
    <string name="accept_password">accept</string>
    <string name="toggle_password_section">Generate Password</string>
    <string name="keyboard_enter">Enter</string>

    <!-- AUTHORIZED DEVICES ACTIVITY -->
    <string name="title_activity_authorized_devices">Authorized Devices</string>

    <!-- MAIN ACTIVITY -->
    <string name="title_activity_main">OnePass Bluetooth Keyboard</string>
    <string name="send_test_string">Send Password</string>
    <string name="hint_password">Enter Password</string>
    <string name="enable_plugin">Enable Plugin</string>
    <string name="toast_plugin_successfully_activated">Plugin successfully activated</string>
    <string name="plugin_state_enabled">Plugin is activated</string>
    <string name="plugin_state_disabled">Plugin is not yet activated</string>
    <string name="select_authorized_devices">Select authorized devices</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_entry_available">Entry available to type</string>
    <string name="notification_channel_name">Entries available</string>
    <string name="notification_channel_description">Notification channel for the K2A Bluetooth Keyboard plugin for keepass2android</string>
</resources>
